[project]
name = "Labber"
version = "0.1.0"
description = "A modified version of the labber library"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "matplotlib==3.9",
    "numpy==1.23.5",
    "h5py",
    "pyqt5>=5.15.11; sys_platform != 'win32'",
    "pyqt5<=5.15.2; sys_platform == 'win32'",
    "qtpy",
    "msgpack",
    "sip",
    "future",
    "scipy",
    "attrdict",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "lib" }
packages = ["Labber"]

[tool.setuptools.package-data]
Labber = ["**/*"]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]
